[package]
name = "bevy_fundsp_mic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_fundsp = "0.4"
cpal = "0.15"
numeric-array = "0.5.2"
uuid = { version = "1.6.1", features = ["v5"] }
